re-updated gitignore to no longer include '.log' files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 [Oo]bj/
 [Uu]nityGenerated/
 [Bb]uild/
+*.log
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
