--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.1.0",
+    "com.unity.xr.oculus": "1.10.0",
     "com.unity.xr.picoxr": "file:C:/Users/sivelab/Downloads/PicoXR_Platform_SDK-1.2.4_B72",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
